lots of changes, bascily everything fixed/improved
